added misc functionaltiy to improve TarsosDSP